factory 분리 및  공통 response error 처리  대신 기본 alert으로만 에러 메시지를 표시했기 때문에  추후에 toast로 표시하는 방법을 고려해야 함.
 그 밖에 리스트 및 버튼 배치 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -8,6 +8,7 @@
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/js/cinnamon.js"></script>
+<script type="text/javascript" src="/js/configuration/factory/factory.js"></script>
 <script type="text/javascript" src="/js/configuration/layout/layout.js"></script>
 
 </head>
