--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/list.html
@@ -47,10 +47,11 @@
 					<div flex="5">
 						<md-icon>account_circle</md-icon>
 					</div>
-					<b flex="30">{{domain.userId}}</b>
-					<b flex="20">{{domain.name}}</b>
-					<span flex="20" class="text-muted">{{domain.email}}</span>
-					<span class="text-muted">{{domain.tel}}</span>
+					<p>{{domain.userId}}</p>
+					<p>{{domain.name}}</p>
+					<p>{{domain.birthday}}</p>
+					<p>{{domain.email}}</p>
+					<p>{{domain.tel}}</p>
 					<md-divider ng-if="!$last"></md-divider>
 				</md-list-item>
 			</cm-search-list-items>
