--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
@@ -11,9 +11,11 @@
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/js/cinnamon.js"></script>
+<script type="text/javascript" src="/js/configuration/factory/factory.js"></script>
+
 <script type="text/javascript">
 angular.module('cinnamon')
-.controller('configuration.findPassword', function($scope, $http, $interval, $state, $mdToast, $mdDialog, $mdMedia) {
+.controller('configuration.findPassword', function($scope, $http, $interval, $state, $mdToast, $mdDialog, $mdMedia, message) {
 	console.log('configuration.users.create');
 	
 	$scope.create = function(form, event) {
@@ -57,6 +59,29 @@ angular.module('cinnamon')
 		history.go(-1);
 	}
 	
+	// 초기화 메일 발송
+	$scope.sendEmail = function() {
+		if($scope.firstUserform.$valid == false){
+			message.alert('입력값을 확인해주세요.');
+			return ;
+		}
+		
+		$http.put('/rest/accounts/initPassword', $scope.domain ) 
+			.success(function(result) {
+				console.log(result);
+				if(result == 1) {
+					message.alert('메일이 발송되었습니다.');	
+					$interval(function() {
+						$scope.goBack();
+					}, 1000, 1)
+					
+				}
+				if(result == 0) {
+					message.alert('회원 정보를 확인해주세요.');
+				}
+			});
+		
+	}
 });
 </script>
 <base href="/" />
@@ -79,10 +104,18 @@ angular.module('cinnamon')
 			</md-card-header>
 			
 			<p class="alert-info"  layout-margin="" layout-padding="">
-				회원가입시 등록한 이메일 주소로 비밀번호 초기화 링크를 전달해 드립니다.
+				회원가입시 등록한 이메일 주소로 임시 비빌번호를 전달해 드립니다.
 			</p>
 			<md-card-content>
 				<form name="firstUserform" novalidate="novalidate" layout-padding="">
+
+					<md-input-container class="md-block">
+						<label>아이디</label>
+						<input type="text" name="userId" ng-model="domain.userId" required="required" md-maxlength="200" maxlength="200" />
+						<div ng-messages="firstUserform.userId.$submitted">
+							<div ng-message="required" ng-show="firstUserform.userId.$error.required">필수 입력 항목입니다.</div>
+						</div>
+					</md-input-container>
 
 					<md-input-container class="md-block">
 						<label>이메일</label>
@@ -97,7 +130,7 @@ angular.module('cinnamon')
 				
 				
 			</md-card-content>
-			<md-button type="submit" class="md-raised md-primary">비밀번호 초기화 이메일 발송</md-button>
+			<md-button class="md-raised md-primary" ng-click="sendEmail()" ng-disabled="!firstUserform.$valid">비밀번호 초기화 이메일 발송</md-button>
 			<md-card-actions layout="row" layout-align="end">
 				<md-button ng-click="goBack()">취소</md-button>
 			</md-card-actions>
