사이트 기본 템플릿에 메뉴를 서버에서 부터 표시되어 나가도록 수정 기존에 클라이언트에서 ajax로 메뉴 구조를 읽어와서 표시했었는데 로딩속도를 줄이기 위해서 서버에서부터 메뉴가 적용된 html을 내려받도록 수정함

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -66,13 +66,13 @@
 			ng-model="current.page"
 			ng-change="onPageChange()" />
 		
-		<!-- <uib-pager
+		<uib-pager
 			ng-if="isMobile()"
 			layout-margin=""
 			template-url="/configuration/partials/directive/pager"
 			total-items="domains.totalElements"
 			ng-model="current.page"
-			ng-change="onPageChange()" /> -->
+			ng-change="onPageChange()" />
 	</div>
 	<!-- 페이징 끝-->
 	<!-- 리스트 -->
