--- a/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
@@ -14,7 +14,7 @@
 /*<![CDATA[*/
 angular.module('cinnamon')
 .config(function($stateProvider, $urlRouterProvider) {
-}).controller('settings.passwordController', function($scope, $http, message) {
+}).controller('settings.passwordController', function($scope, $http, message, pageMove) {
 	
 	$scope.change = function(form, $event) {
 		if (form.$valid == false) {
@@ -27,6 +27,8 @@ angular.module('cinnamon')
 		.success(function(data) {
 			$scope.domain = {};
 			message.alert('변경되었습니다.');
+			pageMove.location('/profile');
+			
 		}).finally(function() {
 			$scope.isProcess = false;
 		});
@@ -55,21 +57,21 @@ angular.module('cinnamon')
 				<md-card-content>
 					<md-input-container class="md-block">
 						<label>현재 비밀번호</label>
-						<input name="currentPassword" ng-model="domain.currentPassword" required="required" md-maxlength="50" maxlength="50" />
+						<input type="password" name="currentPassword" ng-model="domain.currentPassword" required="required" md-maxlength="50" maxlength="50" />
 						<div ng-messages="form.currentPassword.$error">
 							<div ng-message="required">필수 입력 항목입니다.</div>
 						</div>
 					</md-input-container>
 					<md-input-container class="md-block">
 						<label>새 비밀번호</label>
-						<input name="newPassword" ng-model="domain.newPassword" required="required" md-maxlength="50" maxlength="50" />
+						<input type="password" name="newPassword" ng-model="domain.newPassword" required="required" md-maxlength="50" maxlength="50" />
 						<div ng-messages="form.newPassword.$error">
 							<div ng-message="required">필수 입력 항목입니다.</div>
 						</div>
 					</md-input-container>
 					<md-input-container class="md-block">
 						<label>새 비밀번호 확인</label>
-						<input name="newPasswordConfirm" ng-model="domain.newPasswordConfirm" required="required" md-maxlength="50" maxlength="50" />
+						<input type="password" name="newPasswordConfirm" ng-model="domain.newPasswordConfirm" required="required" md-maxlength="50" maxlength="50" />
 						<div ng-messages="form.newPasswordConfirm.$error">
 							<div ng-message="required">필수 입력 항목입니다.</div>
 						</div>
