--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/join.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/join.html
@@ -73,7 +73,7 @@ angular.module('cinnamon')
 			.success(function(result, status) {
 				$scope.create(form, $event);
 		}).error(function(data, status) {
-				message.alert("자동 입력 방지 문자를 정상적으로 입력해주세요")
+				message.alert("자동 입력 방지 문자를 정상적으로 입력해주세요");
 		})
 	}
 	
