공통 파일업로드 디렉티브 관련 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/fileUpload.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/fileUpload.html
@@ -1,6 +1,6 @@
 <div>
 	
-	<md-button ngf-select="" ng-model="fileModel" name="file" class="md-raised md-primary">퍄일 선택...</md-button>
+	<md-button ngf-select="upload($file)" ng-model="fileModel" name="file" class="md-raised md-primary">퍄일 선택...</md-button>
 	
 	<div ngf-drop="" class="drop-box well" ng-model="fileModel" name="file"
 		ngf-drag-over-class="'dragover'" layout-margin="">
