searchList 디렉티브에서 검색초기화가 정상적으로 되지 않던 문제 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -3,8 +3,7 @@
 	<span class="text-muted">비어 있습니다.</span>
 </div>
  -->
-<div ng-clock="">
-	
+<div>
 	<!-- 상세검색 헤더 -->
 	<!-- <md-progress-linear ng-if="showProgress" md-mode="indeterminate"></md-progress-linear> -->
 	<md-content layout-padding="" layout="row" layout-align="center center">
