--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/base.html
@@ -37,6 +37,7 @@
 <!-- <script type="text/javascript" src="/webjars/momentjs/2.12.0/moment.js"></script>  -->
 <!-- <script type="text/javascript" src="/webjars/mdPickers/0.5.2/src/mdPickers.js"></script>  -->
 <script type="text/javascript" src="/webjars/momentjs/2.12.0/moment.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.10.1/angular-moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.rawgit.com/alenaksu/mdPickers/0.7.2/dist/mdPickers.min.js"></script>
 
 </head>
