로그 삭제 및 기타 오류사항 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
@@ -51,8 +51,10 @@ angular.module('cinnamon')
 					});
 				});
 			}
+			if(status == 500) {
+				message.alert('에러가 발생되었습니다.');
+			}
 		});
-		
 	}
 	
 	$scope.goBack = function() {
@@ -65,22 +67,23 @@ angular.module('cinnamon')
 			message.alert('입력값을 확인해주세요.');
 			return ;
 		}
-		
 		$http.put('/rest/accounts/initPassword', $scope.domain ) 
 			.success(function(result) {
-				console.log(result);
 				if(result == 1) {
 					message.alert('메일이 발송되었습니다.');	
 					$interval(function() {
 						$scope.goBack();
 					}, 1000, 1)
-					
 				}
 				if(result == 0) {
 					message.alert('회원 정보를 확인해주세요.');
 				}
+			})
+			.error(function(data, status) {
+				if(status == '404') {
+					message.alert("기본 메일서버가 존재하지 않습니다.");
+				}
 			});
-		
 	}
 });
 </script>
