개인 설정 메뉴에서 비밀번호 변경 기능 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/dialogTemplate.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/dialogTemplate.html
@@ -23,7 +23,7 @@
 			ng-if="onAction != null"
 			class="md-raised md-primary"
 			ng-disabled="isProcess"
-			ng-click="onAction({target: $event})">{{actionName}}</md-button>
+			ng-click="onAction()">{{actionName}}</md-button>
 		<md-button ng-click="close()">취소</md-button>
 	</md-dialog-actions>
 	
