--- a/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
@@ -17,6 +17,8 @@ angular.module('cinnamon')
 }).controller('settings.passwordController', function($scope, $http, message, pageMove) {
 	
 	$scope.change = function(form, $event) {
+		console.log('change');
+		
 		if (form.$valid == false) {
 			message.alert('입력값을 확인하시기 바랍니다.');
 			return;
@@ -27,7 +29,10 @@ angular.module('cinnamon')
 		.success(function(data) {
 			$scope.domain = {};
 			message.alert('변경되었습니다.');
-			pageMove.location('/profile');
+			
+			//pageMove.location('/profile');
+			
+		}).error(function() {
 			
 		}).finally(function() {
 			$scope.isProcess = false;
