http 요청시 공통 에러처리 팝업 추가 회원가입 페이지에서  가입 실패시 상세한 실패원인 메시지 표시 회원가입 페이지의 capcha를 개별 프로젝트에서 처리하는 것으로 하고 공통 부분에서는 제외 시킴 개인 설정 비밀번호 변경화면에서 변경완료후 폼이 입력 유효성 실패 상태로 남는 문제 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
@@ -51,6 +51,14 @@ angular.module('cinnamon')
 			fullscreen: useFullScreen,
 			templateUrl: '/settings/partials/account/changePassword',
 			controller: function($scope, $http, $mdDialog, $mdToast) {
+				$scope.close = function() {
+					$mdDialog.hide();
+				}
+				
+				$scope.isMobile = function() {
+					return $mdMedia('xs');
+				}
+				
 				$scope.change = function(form, $event, domain) {
 					console.log('change');
 					if (form.$valid == false) {
@@ -128,7 +136,7 @@ angular.module('cinnamon')
 					</md-input-container>
 				</md-card-content>
 				<md-card-actions layout-align="end" layout="row">
-					<md-button class="md-raised md-accent" ng-click="changePassword($event)">비밀번호 변경</md-button>
+					<!-- <md-button class="md-raised md-accent" ng-click="changePassword($event)">비밀번호 변경</md-button> -->
 					<md-button class="md-raised md-primary" type="sumbit" ng-disabled="!form.$valid">수정</md-button>
 				</md-card-actions>
 				
