--- a/cinnamon-core-web-material/src/main/resources/templates/settings/partials/account/changePassword.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/partials/account/changePassword.html
@@ -1,29 +1,55 @@
-<md-dialog flex="70" cm-dialog-template="" toolbar-title="'비밀번호 변경'">
-		<cm-dialog-template-content>
-			<form name="form" novalidate="novalidate" ng-submit="change(form, $event, domain)" layout-padding="">
-				<md-input-container class="md-block">
-					<label>현재 비밀번호</label>
-					<input type="password" name="currentPassword" ng-model="domain.currentPassword" required="required" md-maxlength="50" maxlength="50" />
-					<div ng-messages="form.currentPassword.$error">
-						<div ng-message="required">필수 입력 항목입니다.</div>
-					</div>
-				</md-input-container>
-				<md-input-container class="md-block">
-					<label>새 비밀번호</label>
-					<input type="password" name="newPassword" ng-model="domain.newPassword" required="required" md-maxlength="50" maxlength="50" />
-					<div ng-messages="form.newPassword.$error">
-						<div ng-message="required">필수 입력 항목입니다.</div>
-					</div>
-				</md-input-container>
-				<md-input-container class="md-block">
-					<label>새 비밀번호 확인</label>
-					<input type="password" name="newPasswordConfirm" ng-model="domain.newPasswordConfirm" required="required" md-maxlength="50" maxlength="50" />
-					<div ng-messages="form.newPasswordConfirm.$error">
-						<div ng-message="required">필수 입력 항목입니다.</div>
-					</div>
-				</md-input-container>
-				<md-progress-circular md-mode="indeterminate" ng-show="isProcess"></md-progress-circular>
-				<md-button class="md-raised md-primary" type="submit" ng-disabled="isProcess">변경</md-button>
-			</form>
-		</cm-dialog-template-content>
+<md-dialog flex="70">
+	<md-toolbar ng-if="isMobile()">
+		<div class="md-toolbar-tools">
+			<md-button class="md-icon-button" ng-click="close()">
+				<md-icon>arrow_back</md-icon>
+			</md-button>
+			<h2 class="md-title">비밀번호 변경</h2>
+			<span flex=""></span>
+			<md-button
+				class="md-raised"
+				ng-disabled="isProcess"
+				ng-click="change(form, $event)">변경</md-button>
+			
+		</div>
+	</md-toolbar>
+	<span class="md-title" layout-margin="" ng-if="!isMobile()">비밀번호 변경</span>
+	<md-dialog-content>
+		
+		<form name="form" novalidate="novalidate" ng-submit="change(form, $event)" layout-padding="">
+			<md-input-container class="md-block">
+				<label>현재 비밀번호</label>
+				<input type="password" name="currentPassword" ng-model="domain.currentPassword" required="required" md-maxlength="50" maxlength="50" />
+				<div ng-messages="form.currentPassword.$error">
+					<div ng-message="required">필수 입력 항목입니다.</div>
+				</div>
+			</md-input-container>
+			<md-input-container class="md-block">
+				<label>새 비밀번호</label>
+				<input type="password" name="newPassword" ng-model="domain.newPassword" required="required" md-maxlength="50" maxlength="50" />
+				<div ng-messages="form.newPassword.$error">
+					<div ng-message="required">필수 입력 항목입니다.</div>
+				</div>
+			</md-input-container>
+			<md-input-container class="md-block">
+				<label>새 비밀번호 확인</label>
+				<input type="password" name="newPasswordConfirm" ng-model="domain.newPasswordConfirm" required="required" md-maxlength="50" maxlength="50" />
+				<div ng-messages="form.newPasswordConfirm.$error">
+					<div ng-message="required">필수 입력 항목입니다.</div>
+				</div>
+			</md-input-container>
+			<!-- <md-progress-circular md-mode="indeterminate" ng-show="isProcess"></md-progress-circular>
+			<md-button class="md-raised md-primary" type="submit" ng-disabled="isProcess">변경</md-button> -->
+		</form>
+		
+	</md-dialog-content>
+	<md-dialog-actions layout="row" ng-if="!isMobile()">
+		<md-progress-circular md-mode="indeterminate" ng-show="isProcess"></md-progress-circular>
+		<md-button
+			class="md-raised md-primary"
+			ng-disabled="isProcess"
+			ng-click="change(form, $event)">변경</md-button>
+		<md-button ng-click="close()">취소</md-button>
+	</md-dialog-actions>
+
 </md-dialog>
