--- a/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/password.html
@@ -14,7 +14,12 @@
 /*<![CDATA[*/
 angular.module('cinnamon')
 .config(function($stateProvider, $urlRouterProvider) {
-}).controller('settings.passwordController', function($scope, $http, message, pageMove) {
+	$stateProvider.state('list', {
+		url: '/settings/password',
+		templateUrl: '/settings/partials/password/form',
+		controller: 'settings.passwordController'
+	});
+}).controller('settings.passwordController', function($scope, $http, message, pageMove, $state, $mdDialog) {
 	
 	$scope.change = function(form, $event) {
 		console.log('change');
@@ -32,7 +37,34 @@ angular.module('cinnamon')
 			
 			//pageMove.location('/profile');
 			
-		}).error(function() {
+			$state.reload();
+		}).error(function(data, status) {
+			console.log(data);
+			console.log(status);
+			
+			if (status == '400') {
+				if (data.violations != null) {
+					var message = '';
+					
+					data.violations.forEach(function(v) {
+						message += '<b>' + v.paramName + '</b> :';
+						message += v.message + '<br />';
+					});
+					
+					$mdDialog.show(
+						$mdDialog.alert()
+							.title('입력 오류')
+							.targetEvent($event)
+							.htmlContent(message)
+							.ok('확인'));
+				} else if (data.cause == 'incorrectPassword') {
+					$mdDialog.show(
+						$mdDialog.alert()
+							.targetEvent($event)
+							.textContent('현재 비밀번호가 일치하지 않습니다.')
+							.ok('확인'));
+				}
+			}
 			
 		}).finally(function() {
 			$scope.isProcess = false;
@@ -52,44 +84,7 @@ angular.module('cinnamon')
 			<span class="md-subhead text-muted">비밀번호</span>
 		</h3>
 		
-		<form name="form" novalidate="novalidate" ng-submit="change(form, $event)">
-			<md-card>
-				<md-card-title>
-					<md-card-title-text>
-						<span class="md-title">비밀번호 변경</span>
-					</md-card-title-text>
-				</md-card-title>
-				<md-card-content>
-					<md-input-container class="md-block">
-						<label>현재 비밀번호</label>
-						<input type="password" name="currentPassword" ng-model="domain.currentPassword" required="required" md-maxlength="50" maxlength="50" />
-						<div ng-messages="form.currentPassword.$error">
-							<div ng-message="required">필수 입력 항목입니다.</div>
-						</div>
-					</md-input-container>
-					<md-input-container class="md-block">
-						<label>새 비밀번호</label>
-						<input type="password" name="newPassword" ng-model="domain.newPassword" required="required" md-maxlength="50" maxlength="50" />
-						<div ng-messages="form.newPassword.$error">
-							<div ng-message="required">필수 입력 항목입니다.</div>
-						</div>
-					</md-input-container>
-					<md-input-container class="md-block">
-						<label>새 비밀번호 확인</label>
-						<input type="password" name="newPasswordConfirm" ng-model="domain.newPasswordConfirm" required="required" md-maxlength="50" maxlength="50" />
-						<div ng-messages="form.newPasswordConfirm.$error">
-							<div ng-message="required">필수 입력 항목입니다.</div>
-						</div>
-					</md-input-container>
-				</md-card-content>
-				<md-card-actions layout-align="end" layout="row">
-					<md-progress-circular md-mode="indeterminate" ng-show="isProcess"></md-progress-circular>
-					<md-button class="md-raised md-primary" type="submit" ng-disabled="isProcess">변경</md-button>
-					<!-- <md-button ng-click="">비밀번호를 분실했습니다.</md-button> -->
-				</md-card-actions>
-				
-			</md-card>
-		</form>
+		<ui-view />
 	</md-content>
 </body>
 </html>
