--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/findPassword.html
@@ -7,7 +7,7 @@
 	layout:decorator="configuration/layout/base">
 
 <head>
-<title>비밀번호 찾기</title>
+<title>비밀번호 초기화</title>
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/js/cinnamon.js"></script>
@@ -16,46 +16,8 @@
 <script type="text/javascript">
 angular.module('cinnamon')
 .controller('configuration.findPassword', function($scope, $http, $interval, $state, $mdToast, $mdDialog, $mdMedia, message) {
-	console.log('configuration.users.create');
+	console.log('configuration.findPassword');
 	
-	$scope.create = function(form, event) {
-		console.log('create');
-		
-		if (form.$valid == false ||
-			$scope.domain.password != $scope.domain.password2) {
-			
-			$mdToast.show(
-				$mdToast.simple()
-					.textContent('입력값을 확인하시기 바랍니다.'));
-			return;
-		}
-		
-		$scope.isProcess = true;
-		$http.head('/rest/configuration/users/' + $scope.domain.userId)
-		.success(function(data, status) {
-			$mdToast.show(
-					$mdToast.simple()
-					.position('top right')
-					.textContent('이미 사용중인 아이디 입니다. 다른 아이디를 입력하시기 바랍니다.'));
-			$scope.isProcess = false;
-		}).error(function(data, status) {
-			if (status == 404) {
-				$scope.isProcess = true;
-				$http.post('/rest/configuration/users', $scope.domain)
-				.success(function(data, status, config) {
-					console.log(status);
-					
-					$mdDialog.hide()
-					.then(function() {
-						$state.go('view', {userId: $scope.domain.userId});
-					});
-				});
-			}
-			if(status == 500) {
-				message.alert('에러가 발생되었습니다.');
-			}
-		});
-	}
 	
 	$scope.goBack = function() {
 		history.go(-1);
@@ -114,16 +76,17 @@ angular.module('cinnamon')
 
 					<md-input-container class="md-block">
 						<label>아이디</label>
-						<input type="text" name="userId" ng-model="domain.userId" required="required" md-maxlength="200" maxlength="200" />
-						<div ng-messages="firstUserform.userId.$submitted">
+						<input type="text" name="userId" ng-model="domain.userId" required="required" md-maxlength="20" maxlength="20"  minlength="6" />
+						<div ng-messages="firstUserform.userId.$error">
 							<div ng-message="required" ng-show="firstUserform.userId.$error.required">필수 입력 항목입니다.</div>
+							<div ng-message="minlength">최소 6자리 이상 입력하시기 바랍니다.</div>
 						</div>
 					</md-input-container>
 
 					<md-input-container class="md-block">
 						<label>이메일</label>
 						<input type="email" name="email" ng-model="domain.email" required="required" md-maxlength="200" maxlength="200" />
-						<div ng-messages="firstUserform.email.$submitted">
+						<div ng-messages="firstUserform.email.$error">
 							<div ng-message="required" ng-show="firstUserform.email.$error.required">필수 입력 항목입니다.</div>
 							<div ng-message="email" ng-show="firstUserform.email.$error.email">이메일 형식을 입력하시기 바랍니다.</div>
 						</div>
